Spacing fix

--- a/src/sass/resume.scss
+++ b/src/sass/resume.scss
@@ -134,6 +134,7 @@ p {
 
       #personal-interests {
         flex: 1 0 auto;
+        padding-bottom: 1.2rem;
 
         .interest-wrapper {
           display: flex;
